--- a/MovieShopAPI/appsettings.json
+++ b/MovieShopAPI/appsettings.json
@@ -3,7 +3,7 @@
 
     "MovieShopDbConnection": "Server=DESKTOP-A4L01UR;Database=MovieShop;Integrated Security=true;"
   },
-
+  "movieShopSPAUrl": "http://localhost:4200",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
